Updated the logo to be centered and started trying to change the colors of the tiles.
Updated the logo to be centered and started trying to change the colors of the tiles.

--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -109,7 +109,7 @@
 
 			&:nth-child(6n - 5) {
 				&:before {
-					background-color: _palette(accent1);
+					background-color: #66ffcc;
 				}
 			}
 
@@ -139,7 +139,7 @@
 
 			&:nth-child(6n) {
 				&:before {
-					background-color: _palette(accent6);
+					background-color: #66ffcc;
 				}
 			}
 		}
