--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -38,10 +38,16 @@
 		border:				rgba(212,212,255,0.1),
 		border-bg:			rgba(212,212,255,0.035),
 		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
+		/*accent1:			#6fc3df,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
 		accent4:			#e7b788,
 		accent5:			#8ea9e8,
 		accent6:			#87c5a4
+		these are the original colors*/
+		accent1:			#66ffcc,
+		accent2: 			#3399ff,
+		accent3: 			#ffcc00,
+		accent4:			#ff5050,
+		accent5:			#993399
 	);
