Update to pictures and color scheme for tiles
Update to pictures and color scheme for tiles

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -48,6 +48,6 @@
 		accent1:			#66ffcc,
 		accent2: 			#3399ff,
 		accent3: 			#ffcc00,
-		accent4:			#ff5050,
-		accent5:			#993399
+		accent4:			#993399,
+		accent5:			#ff5050
 	);
