New pictures for tiles and new colors
New pictures for tiles and new colors

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -45,9 +45,9 @@
 		accent5:			#8ea9e8,
 		accent6:			#87c5a4
 		these are the original colors*/
-		accent1:			#66ffcc,
+		accent1:			#993399,
 		accent2: 			#3399ff,
-		accent3: 			#ffcc00,
-		accent4:			#993399,
-		accent5:			#ff5050
+		accent3: 			#ff5050,
+		accent4:			#66ffcc/*,
+		accent5:			#ffcc00*/
 	);
