--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,8 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Call to Action</a></li>
+                    <li><a href="#two" class="button next scrolly">Call to Action</a></li>
+                    <!--href was ="#one"-->
                 </ul>
             </div>
         </div>
