--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 {% include head.html %}
 
