Updates to begin layout of resources and archives, as well as updating the home page tiles
Updates to begin layout of resources and archives, as well as updating the home page tiles

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,17 @@
 					<label for="message">Message</label>
 					<textarea name="message" id="message" rows="6"></textarea>
 				</div>
+				<!--NOTE: maybe add I'm not a robot or copy me on this; see resources/Archives pages for example of checkboxes-->
+				<!--BEGIN TAKEN FROM EXAMPLE CODE: NEED TO ACTIVATE-->
+				<div class="6u 12u$(small)">
+					<input type="checkbox" id="demo-copy" name="demo-copy">
+					<label for="demo-copy">Email me a copy</label>
+				</div>
+				<div class="6u$ 12u$(small)">
+					<input type="checkbox" id="demo-human" name="demo-human" checked>
+					<label for="demo-human">I am a human</label>
+				</div>
+				<!--END TAKEN CODE-->
 				<ul class="actions">
 					<li><input type="submit" value="Send Message" class="special" /></li>
 					<li><input type="reset" value="Clear" /></li>
