Fixing bugs and unncessary info
Fixing bugs and unncessary info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,10 +21,10 @@
 					<input type="checkbox" id="demo-copy" name="demo-copy">
 					<label for="demo-copy">Email me a copy</label>
 				</div>
-				<div class="6u$ 12u$(small)">
+				<!--<div class="6u$ 12u$(small)">
 					<input type="checkbox" id="demo-human" name="demo-human" checked>
 					<label for="demo-human">I am a human</label>
-				</div>
+				</div>-->
 				<!--END TAKEN CODE-->
 				<ul class="actions">
 					<li><input type="submit" value="Send Message" class="special" /></li>
