--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Call to Action</a></li>
+                    <li><a href="landing.html" class="button next">Get Involved</a></li>
                 </ul>
             </div>
         </section>
