--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 		{% endfor %}
 	</ul>
 	<ul class="actions vertical">
-		<li><a href="#" class="button special fit">Close</a></li>
+		<li><a href="#" class="button special fit">Close</a></li>F
 		<!-- LOG IN BUTTON NOT NEEDED<li><a href="#" class="button fit">Log In</a></li>-->
 	</ul>
 </nav>
