--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
 			<h1>{{ page.title }}</h1>
       <!--<h3>{{ post.author }}</h3>-->
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.url }}/{{ page.image }}" alt="" /></span>{% endif %}
+		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
 		<p>{{ content }}</p>
 	</div>
 </section>
