--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -24,7 +24,8 @@
 			<h1>{{ post.title }}</h1>
       <h3>{{ post.author }}</h3>
 		</header>
-		{% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
+		{% if post.image %}<span class="image main"><img src={{ site.baseurl }}/{{ post.image }} alt="" /></span>{% endif %}
+		<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>
 		{% if post.date %}<p>{{ post.date }}<!--&nbsp;&nbsp;&nbsp;&nbsp;{{ post.author }}--></p>{% endif %}
 		<p>{{ post.content }}</p>
                 {% endfor %}
