--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,10 +21,23 @@
 	<div class="inner">
 		<header class="major">
 			<h1>{{ page.title }}</h1>
-      <!--<h3>{{ post.author }}</h3>-->
+      		<h2>By {{ page.author }}</h2>
+      		{% if page.date %}
+      			<h3>Published on {{ page.date | date_to_string }}</h3>
+      		{% endif %} 
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
-		<p>{{ content }}</p>
+		{% if page.image %}
+			<span class="image main"><img src={{ site.baseurl }}{{ page.image }} alt="" /></span>
+			{% if page.photocredit %}
+				<div style="text-align: center;">
+					<i>{{ page.photocredit }}</i>
+				</div>
+			{% endif %}
+		{% endif %}
+		<hr />
+		<div class="blogtext">
+			{{ content }}
+		</div>
 	</div>
 </section>
 
