--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@
       		{% endif %} 
 		</header>
 		{% if page.image %}
-			<span class="image main"><img src={{ site.baseurl }}{{ page.image }} alt="" /></span>
+			<span class="image main"><img src={{ page.image | absolute_url}} alt="" /></span>
 			{% if page.photocredit %}
 				<div style="text-align: center;">
 					<i>{{ page.photocredit }}</i>
