--- a/_layouts/allpostsBrief.html
+++ b/_layouts/allpostsBrief.html
@@ -15,9 +15,26 @@
 
 <!-- Main -->
 <div id="main" class="alt">
-	<div style="text-align: center;">
+	<!--<div style="text-align: center;">
 		<h1>{{ page.content }}</h1>
-	</div>
+	</div>-->
+  <section id="banner" class="style2">
+      <div class="inner">
+          <span class="image">
+              <img src="{{ site.baseurl }}/{{ page.image }}" alt="">
+          </span>
+          <header class="major">
+
+              <h1>{{ page.title }}</h1>
+
+          </header>
+          <div class="content">
+
+              {{ page.description }}
+
+          </div>
+      </div>
+  </section>
 
 <!-- One -->
 <section id="one">
