Made changes to the general text and buttons on about us
Made changes to the general text and buttons on about us

--- a/_layouts/aboutUsLayout.html
+++ b/_layouts/aboutUsLayout.html
@@ -25,14 +25,17 @@
             <div class="content">
 
                 {{ page.description }}
-                <div id="main">
-            			<ul class="actions">
-            				<li><a href="#Mission" class="button fit">Our Mission</a></li>
-            				<li><a href="#Exec" class="button fit">Executive Board</a></li>
-            				<li><a href="#Member" class="button fit">Member Highlights</a></li>
-            			</ul>
-            		</div>
+
             </div>
+
+            <!--<div id="main">-->
+              <ul class="actions">
+                <li><a href="#Mission" class="button fit">Our Mission</a></li>
+                <li><a href="#Exec" class="button fit">Executive Board</a></li>
+                <li><a href="#Member" class="button fit">Member Highlights</a></li>
+              </ul>
+            <!--</div>-->
+            
         </div>
     </section>
 
