Removed email me a copy from footer (doesn't work) and finalized the landing.md
Removed email me a copy from footer (doesn't work) and finalized the landing.md

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
 				</div>
 				<!--NOTE: maybe add I'm not a robot or copy me on this; see resources/Archives pages for example of checkboxes-->
 				<!--BEGIN TAKEN FROM EXAMPLE CODE: NEED TO ACTIVATE-->
-				<div class="6u 12u$(small)">
+				<!--<div class="6u 12u$(small)">
 					<input type="checkbox" id="demo-copy" name="demo-copy">
 					<label for="demo-copy">Email me a copy</label>
-				</div>
+				</div>-->
 				<!--<div class="6u$ 12u$(small)">
 					<input type="checkbox" id="demo-human" name="demo-human" checked>
 					<label for="demo-human">I am a human</label>
