--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -36,3 +36,15 @@
 			}
 
 	}
+
+	a.anchor {
+		display: block;
+		position: relative;
+		top: -3.5em;
+		visibility: hidden;
+	}
+
+	.button {
+		margin-top: 12px;
+		margin-bottom: 12px;
+	}
