--- a/_layouts/aboutUsLayout.html
+++ b/_layouts/aboutUsLayout.html
@@ -7,6 +7,7 @@
 <html>
 
 {% include head.html %}
+<link rel="stylesheet" type="text/css" href="{{ "assets/css/profile_layout.css" | relative_url }}">
 
 <body>
 
