Removed filler from pages and added a section in the resources section about UX/UI
Removed filler from pages and added a section in the resources section about UX/UI

--- a/_layouts/aboutUsLayout.html
+++ b/_layouts/aboutUsLayout.html
@@ -34,10 +34,10 @@
               <ul class="actions">
                 <li><a href="#Mission" class="button fit">Our Mission</a></li>
                 <li><a href="#Exec" class="button fit">Executive Board</a></li>
-                <li><a href="#Member" class="button fit">Member Highlights</a></li>
+                <!--HERE WILL BE FOR WHEN WE FEATURE OUR MEMBERS<li><a href="#Member" class="button fit">Member Highlights</a></li>-->
               </ul>
             <!--</div>-->
-            
+
         </div>
     </section>
 
