added a button on the mission about techshift; also linked the first join the mission button directly to the landing to minimize clicks
added a button on the mission about techshift; also linked the first join the mission button directly to the landing to minimize clicks

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,8 +21,8 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#two" class="button next scrolly">Join the Mission</a></li>
-                    <!--href was ="#one"-->
+                    <li><a href="apply" class="button next scrolly">Join the Mission</a></li>
+                    <!--href was ="#two"-->
                 </ul>
             </div>
         </div>
