--- a/_sass/components/_form.scss
+++ b/_sass/components/_form.scss
@@ -11,14 +11,20 @@
 
 		.field {
 			margin: 0 0 (_size(element-margin) * 1) 0;
+			border-radius: 25px;
+			background: #c2c2d6;
 
 			&.half {
 				width: 50%;
 				float: left;
 				padding: 0 0 0 (_size(element-margin) * 1 * 0.5);
+				border-radius: 25px;
+				background: #c2c2d6;
 
 				&.first {
 					padding: 0 (_size(element-margin) * 1 * 0.5) 0 0;
+					border-radius: 25px;
+					background: #c2c2d6;
 				}
 			}
 		}
