--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -13,8 +13,6 @@
 		font-weight: _font(weight);
 		letter-spacing: _font(letter-spacing);
 		line-height: 1.65;
-		border-radius: 10px;
-		background: #c2c2d6;
 
 		@include breakpoint(xlarge) {
 			font-size: 14pt;
@@ -27,6 +25,11 @@
 		@include breakpoint(xxsmall) {
 			font-size: 11pt;
 		}
+	}
+
+	textarea {
+		border-radius: 10px;
+		background: #c2c2d6;
 	}
 
 	a {
