added intro sentence, modified layout for right float images, deleted large image

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,11 @@
 			</p>
 		</header>
 		{% if page.image %}
-			<span class="image"><img src={{ page.image | absolute_url}} alt="" /></span>
+			{% if page.image_right %}
+				<span class="image right"><img src={{ page.image | absolute_url}} alt="" /></span>
+			{% else %}
+				<span class="image main"><img src={{ page.image | absolute_url}} alt="" /></span>				
+			{% endif %}
 			{% if page.photocredit %}
 				<div style="text-align: center;">
 					<i>{{ page.photocredit }}</i>
