--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,8 +28,10 @@
 		{% if page.image %}
 			{% if page.image_right %}
 				<span class="image right"><img src={{ page.image | absolute_url}} alt="" /></span>
-			{% else %}
-				<span class="image main"><img src={{ page.image | absolute_url}} alt="" /></span>				
+      {% if page.image_left %}
+        <span class="image left"><img src={{ page.image | absolue_url}} alt="" /></span>
+      {% else %}
+				<span class="image main"><img src={{ page.image | absolute_url}} alt="" /></span>
 			{% endif %}
 			{% if page.photocredit %}
 				<div style="text-align: center;">
