working on image size and padding for archived event
working on image size and padding for archived event

--- a/assets/css/archive_layout.css
+++ b/assets/css/archive_layout.css
@@ -13,6 +13,10 @@ div.archive-img {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	border-radius: 8px;
 	width: 100%;
-	max-width: 225px;
+	max-width: 175px;
 	height: 100%;
+}
+.event-description {
+  margin: 5px 5px 5px;
+  padding: 5px;
 }
