changes to css for archives pages
changes to css for archives pages

--- a/_layouts/archivesLayout.html
+++ b/_layouts/archivesLayout.html
@@ -7,6 +7,7 @@
 <html>
 
 {% include head.html %}
+<link rel="stylesheet" type="text/css" href="{{ "assets/css/archive_layout.css" | relative_url }}">
 
 <body>
 
@@ -25,7 +26,7 @@
             <div class="content">
 
                 {{ page.description }}
-              
+
             </div>
         </div>
     </section>
