--- a/assets/css/archive_layout.css
+++ b/assets/css/archive_layout.css
@@ -1,19 +1,10 @@
 div.archive-img {
-	margin: 12px 12px 12px;
+	margin: 10px 10px 10px;
 	background-color: #242943;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 	border-radius: 8px;
 	width: 150%;
-	max-width: 175px;
-	height: 100%;
-}
-.archive-img {
-	margin: 12px 12px 12px;
-	background-color: #242943;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	border-radius: 8px;
-	width: 100%;
-	max-width: 175px;
+	max-width: 275px;
 	height: 100%;
   padding-right: 10px;
 }
