remove box shadow from picture for archives
remove box shadow from picture for archives

--- a/assets/css/archive_layout.css
+++ b/assets/css/archive_layout.css
@@ -1,7 +1,7 @@
 div.archive-img {
 	margin: 10px 10px 10px;
 	background-color: #242943;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	/*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 	border-radius: 8px;
 	width: 150%;
 	max-width: 475px;
