Add a return button for each blog post so they can go back easily. TODO: add next post button; fixed
Add a return button for each blog post so they can go back easily. TODO: add next post button; fixed

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,9 @@
 <body>
 
     {% include header.html %}
+    <ul class="actions">
+      <li><a href="blog" class="button next scrolly">Return to All Posts</a></li>
+    </ul>
 
 
 <!-- Main -->
