Added Abby and Grant to about us and added past exec members section
Added Abby and Grant to about us and added past exec members section

--- a/_layouts/aboutUsLayout.html
+++ b/_layouts/aboutUsLayout.html
@@ -34,6 +34,7 @@
               <ul class="actions">
                 <li><a href="#Mission" class="button fit">Our Mission</a></li>
                 <li><a href="#Exec" class="button fit">Executive Board</a></li>
+                <li><a href="#PastExec" class="button fit">Past Executive Members</a></li>
                 <!--HERE WILL BE FOR WHEN WE FEATURE OUR MEMBERS<li><a href="#Member" class="button fit">Member Highlights</a></li>-->
               </ul>
             <!--</div>-->
